port: backport client GUI/render APIs and ME helpers to 1.20.1
- Replace 1.21+ Icon constants (COG/COG_DISABLED/BACK) with 1.20.1
  WRENCH/WRENCH_DISABLED/ARROW_LEFT.
- Drop Icon.TOOLBAR_BUTTON_BACKGROUND_FOCUS/HOVER (single state in 1.20.1)
  and strip Blitter.zOffset() calls.
- Map ActionItems.S_CLOSE -> CLOSE, ActionItems.COG -> WRENCH.
- Replace Screen.renderBackground 4-arg, mouseScrolled 4-arg, blitSprite,
  Slot.x/y mutation, FastColor.ARGB32.opaque, putBulkData with float alpha,
  and VertexConsumer.addVertex/setColor/setNormal with the 1.20.1 equivalents.
- Adapt FluidStack.getHoverName/getFluidType/copyWithAmount/.is(Tag) to
  1.20.1 forge (Fluid.getFluidType, new FluidStack ctor, Fluid.is(Tag)).
- Replace List.getFirst with get(0).
- Switch DirectMEInsertInventory/OverloadPatternDecoder to the 1.20.1
  GenericInternalInventory.isAllowed and IPatternDetailsDecoder signatures.
- Wrap registryAccess() in OverloadPatternEncoderMenu via player level.
- Drop shouldAddToolbar overrides (1.21-only) on output-config screens.
- Use ae2:ChestPanel scrollbar fallback (flat fill) until sprite atlas exists.
- Loosen Iterable<AEKeyType> to Set via Sets.newHashSet for 1.20.1 ConfigInv.